RESOLVED FIXED39760
[Qt] WheelEventQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39760
Summary [Qt] WheelEventQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:24:49 PDT
WebCore/platform/qt/WheelEventQt.cpp:21: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebCore/platform/qt/WheelEventQt.cpp:23: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/WheelEventQt.cpp:27: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/WheelEventQt.cpp:28: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/WheelEventQt.cpp:60: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 5 in 1 files
Attachments
Patch that fixes the coding style issues (2.23 KB, patch)
2010-05-26 14:33 PDT, Anders Bakken
no flags
Patch that fixes the coding style issues (2.24 KB, patch)
2010-05-26 14:43 PDT, Anders Bakken
no flags
Patch that fixes the coding style issues (2.48 KB, patch)
2010-05-26 15:15 PDT, Anders Bakken
no flags
Patch (2.60 KB, patch)
2010-06-04 10:51 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:33:45 PDT
Created attachment 57140 [details] Patch that fixes the coding style issues
Anders Bakken
Comment 2 2010-05-26 14:43:04 PDT
Created attachment 57153 [details] Patch that fixes the coding style issues
Anders Bakken
Comment 3 2010-05-26 15:15:46 PDT
Created attachment 57167 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 4 2010-05-26 21:41:06 PDT
QtTriaged
David Levin
Comment 5 2010-05-27 11:10:07 PDT
Comment on attachment 57167 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
Anders Bakken
Comment 6 2010-06-04 10:51:17 PDT
WebKit Commit Bot
Comment 7 2010-06-12 21:04:26 PDT
Comment on attachment 57895 [details] Patch Clearing flags on attachment: 57895 Committed r61075: <http://trac.webkit.org/changeset/61075>
WebKit Commit Bot
Comment 8 2010-06-12 21:04:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.