2010-06-12  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        [Qt] WheelEventQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39760

        * platform/qt/WheelEventQt.cpp:
        (WebCore::PlatformWheelEvent::PlatformWheelEvent):

Canonical link: https://commits.webkit.org/52088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61075 268f45cc-cd09-0410-ab3c-d52691b4dbfc